cmake_minimum_required(VERSION 3.28)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/.devcontainer/cmake)
include(preproject)
project(buildpro)
set(externpro_REV 24.04)
find_package(externpro REQUIRED)
include(flags)
xpFindPkg(PKGS criticalio dde_lib fftw gsoap kakadu nasm ng_gdp palam patch pluginsdk sdvideo)
